# Newsvendor-Playground

./: model-codebase-explanation.docx  setup_project.sh  ~$del-codebase-explanation.docx
newsvendor-llm-experiment/: .gitignore  LICENSE  README.md  add_missing_methods.py  arxiv_analysis.py  arxiv_analysis_report_20250619_075554.md  bulk_update_analysis.py  cleanup.sh  comprehensive_analysis.py  comprehensive_analysis_latest.py  debug_analysis.py  debug_auto_detection.py  debug_parsing_script.py  debug_reflection.py  debug_reflection.py.backup_20250616_104814  final_comprehensive_analysis.py  fix_acceptance_pattern.py  fix_price_validation.py  newsvendor_analysis_report_20250619_073213.md  newsvendor_analyzer.py  output_cleaner.py  pyproject.toml  quick_analysis.py  reflection_advantage_report.md  run_all_analysis.py  run_full_experiment_updated.py  run_full_experiment_with_throttling.py  run_validation_updated.py  setup_updated_experiment.py  success_analysis.py  test_auto_detection.py  test_grok.py  tournament_analysis_report.md
newsvendor-llm-experiment/analysis_results/reports/: report_20250615_134802.md  report_20250615_134821.md
newsvendor-llm-experiment/complete_analysis/reports/: report_20250615_171509.md
newsvendor-llm-experiment/config/: experiment.yaml  models.yaml  prompts.yaml
newsvendor-llm-experiment/outputs/: README.md
newsvendor-llm-experiment/outputs/20250616_083901/: README.md
newsvendor-llm-experiment/outputs/20250616_084139/: README.md
newsvendor-llm-experiment/outputs/20250616_091341/: README.md
newsvendor-llm-experiment/outputs/20250616_092508/: README.md
newsvendor-llm-experiment/outputs/20250616_110530/: README.md
newsvendor-llm-experiment/outputs/20250616_110531/: README.md
newsvendor-llm-experiment/outputs/20250616_110532/: README.md
newsvendor-llm-experiment/outputs/20250616_110540/: README.md
newsvendor-llm-experiment/outputs/20250616_110542/: README.md
newsvendor-llm-experiment/outputs/20250616_110559/: README.md
newsvendor-llm-experiment/outputs/20250616_111557/: README.md
newsvendor-llm-experiment/outputs/20250616_114605/: README.md
newsvendor-llm-experiment/outputs/20250616_114928/: README.md
newsvendor-llm-experiment/outputs/20250616_114930/: README.md
newsvendor-llm-experiment/outputs/20250616_114933/: README.md
newsvendor-llm-experiment/outputs/20250616_114935/: README.md
newsvendor-llm-experiment/outputs/20250616_115604/: README.md
newsvendor-llm-experiment/outputs/20250616_120050/: README.md
newsvendor-llm-experiment/outputs/20250616_120116/: README.md
newsvendor-llm-experiment/outputs/20250616_120118/: README.md
newsvendor-llm-experiment/outputs/20250616_120121/: README.md
newsvendor-llm-experiment/src/: __init__.py
newsvendor-llm-experiment/src/agents/: __init__.py  buyer_agent.py  reflection_mixin.py  supplier_agent.py  (+1 more)
newsvendor-llm-experiment/tests/: __init__.py
newsvendor-llm-experiment/validation_results_enhanced/: validation_conversations_20250617_203445.txt  validation_conversations_20250617_205624.txt  validation_summary_20250617_203445.txt  validation_summary_20250617_205624.txt
newsvendor-llm-experiment/validation_results_improved/: validation_conversations_20250617_195227.txt  validation_conversations_20250617_195904.txt  validation_summary_20250617_195227.txt  validation_summary_20250617_195904.txt
newsvendor-llm-experiment/validation_results_updated/: validation_conversations_20250617_191341.txt  validation_conversations_20250617_192544.txt  validation_conversations_20250617_193147.txt
(+41 files in other folders)
