[tool.poetry]
name = "newsvendor-llm-experiment"
version = "0.6.0"  # Bumped version for remote model support
description = "LLM Agent Newsvendor Negotiation Experiment with Remote Models"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
ollama = "^0.3.0"
pandas = "^2.1.0"
numpy = "^1.24.0"
scipy = "^1.11.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
plotly = "^5.15.0"
scikit-learn = "^1.3.0"
pydantic = "^2.4.0"
pyyaml = "^6.0"
asyncio = "^3.4.3"
aiofiles = "^23.2.0"
loguru = "^0.7.0"
tqdm = "^4.66.0"
click = "^8.1.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
psutil = "^5.9.0"
statsmodels = "^0.14.4"
kaleido = "0.2.1"
# Remote model dependencies
boto3 = "^1.34.0"          # AWS Bedrock for Claude
aiohttp = "^3.9.0"         # Async HTTP for Azure APIs
python-dotenv = "^1.0.0"   # Environment variable management
openai = "^1.88.0"
azure-core = "^1.34.0"
azure-ai-inference = "^1.0.0b9"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
pre-commit = "^3.4.0"
jupyter = "^1.0.0"

[tool.poetry.scripts]
newsvendor-experiment = "src.experiments.run_full_experiment:main"
newsvendor-validate = "src.experiments.run_validation_suite:main"
newsvendor-analyze = "src.experiments.analyze_results:main"
newsvendor-debug = "src.utils.debug_data:debug_data"
newsvendor-safe-analyze = "src.analysis.safe_analysis_runner:main"
# New scripts for remote models
newsvendor-setup-remote = "src.core.simple_remote_client:main"
newsvendor-test-remote = "src.core.simple_remote_client:test_main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true